--- a/pages/balance-transfer.html
+++ b/pages/balance-transfer.html
@@ -1,106 +1,130 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Balance Transfer Calculator</title>
-<meta name="description" content="Compare current loan vs new lender offer. Calculate savings and break-even.">
-<meta name="theme-color" content="#0ea5e9">
-<link rel="manifest" href="../manifest.webmanifest">
-<link rel="icon" href="../favicon.svg" type="image/svg+xml">
-<link rel="stylesheet" href="../styles.css">
-<link rel="canonical" href="https://yashpal-0.github.io/Financial-Calculator/pages/balance-transfer.html">
-<meta property="og:type" content="website">
-<meta property="og:title" content="Balance Transfer Calculator">
-<meta property="og:description" content="Compare current loan vs new lender offer. Calculate savings and break-even.">
-<meta property="og:url" content="https://yashpal-0.github.io/Financial-Calculator/pages/balance-transfer.html">
-<meta property="og:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Balance Transfer Calculator">
-<meta name="twitter:description" content="Compare current loan vs new lender offer. Calculate savings and break-even.">
-<meta name="twitter:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Balance Transfer Calculator | FinCalc</title>
+  <meta name="description" content="Compare current loan vs new lender offer. Calculate savings and break-even.">
+  <meta name="theme-color" content="#4f46e5">
+  <link rel="manifest" href="../manifest.webmanifest">
+  <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="canonical" href="https://yashpal-0.github.io/Financial-Calculator/pages/balance-transfer.html">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Balance Transfer Calculator | FinCalc">
+  <meta property="og:description" content="Compare current loan vs new lender offer. Calculate savings and break-even.">
+  <meta property="og:url" content="https://yashpal-0.github.io/Financial-Calculator/pages/balance-transfer.html">
+  <meta property="og:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
 </head>
+
 <body>
-  <div class="container" style="display:flex;justify-content:flex-end;gap:8px;padding-top:8px;">
-    <button id="installBtn" class="ghost" style="display:none;">Install App</button>
-    <button id="themeToggle" class="ghost" title="Toggle dark mode">🌓</button>
+  <!-- Fixed Controls -->
+  <div class="container"
+    style="display:flex;justify-content:flex-end;gap:12px;padding-top:12px;position:relative;z-index:100;">
+    <button id="installBtn" class="ghost"
+      style="display:none;padding:6px 12px;font-size:14px;border-radius:20px;">Install App</button>
+    <button id="themeToggle" class="ghost" title="Toggle dark mode"
+      style="padding:6px 12px;font-size:16px;border-radius:20px;">🌓</button>
   </div>
+
   <nav class="navbar">
     <div class="container nav-wrap">
-      <div class="brand">Financial Calculator</div>
-      <button class="nav-toggle" aria-label="Toggle menu" onclick="document.body.classList.toggle('nav-open')">☰</button>
+      <div class="brand">FinCalc Suite</div>
+      <button class="nav-toggle" aria-label="Toggle menu" onclick="document.body.classList.toggle('nav-open')">☰
+        Menu</button>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="./emi.html">EMI</a></li>
-        <li><a href="./prepayment.html">Prepayment</a></li>
-        <li><a href="./affordability.html">Affordability</a></li>
-        <li><a href="./balance-transfer.html" aria-current="page">Balance Transfer</a></li>
-        <li><a href="./education.html">Education</a></li>
+        <li><a href="./prepayment.html">Prepay</a></li>
+        <li><a href="./sip.html">SIP</a></li>
+        <li><a href="./fd.html">FD</a></li>
+        <li><a href="./rd.html">RD</a></li>
+        <li><a href="./ppf.html">PPF</a></li>
       </ul>
     </div>
   </nav>
 
-  <header>
-    <div class="container">
-      <h1>Balance Transfer</h1>
-      <p>Compare your existing loan with a new lender and estimate net savings.</p>
-    </div>
+  <header class="page-header container">
+    <h1>Balance Transfer</h1>
+    <p style="color:var(--muted); font-size:18px;">Compare your existing loan with a new lender and estimate net
+      savings.</p>
   </header>
 
   <main>
-    <section class="card container">
-      <h2>Current Loan</h2>
-      <div class="row row-3">
-        <div>
-          <label for="currOutstanding">Outstanding Principal</label>
-          <input id="currOutstanding" type="number" inputmode="decimal" min="0" step="1000">
+    <section class="grid grid-2 container">
+      <div class="card">
+        <h2>🏦 Current Loan</h2>
+        <div class="row row-1" style="gap:16px;">
+          <div>
+            <label for="currOutstanding">Outstanding Principal</label>
+            <input id="currOutstanding" type="number" inputmode="decimal" min="0" step="1000">
+          </div>
+          <div>
+            <label for="currRate">Current Rate % (APR)</label>
+            <input id="currRate" type="number" inputmode="decimal" min="0" step="0.01" value="9">
+          </div>
+          <div>
+            <label for="currTenure">Remaining Tenure (months)</label>
+            <input id="currTenure" type="number" inputmode="numeric" min="1" step="1" value="180">
+          </div>
         </div>
-        <div>
-          <label for="currRate">Current Rate %</label>
-          <input id="currRate" type="number" inputmode="decimal" min="0" step="0.01" value="9">
+      </div>
+
+      <div class="card">
+        <h2>✨ New Offer</h2>
+        <div class="row row-1" style="gap:16px;">
+          <div>
+            <label for="newRate">New Rate %</label>
+            <input id="newRate" type="number" inputmode="decimal" min="0" step="0.01" value="8.4">
+          </div>
+          <div>
+            <label for="processingFee">Processing Fee</label>
+            <input id="processingFee" type="number" inputmode="decimal" min="0" step="1000" value="10000">
+          </div>
+          <div>
+            <label for="otherCosts">Other Costs</label>
+            <input id="otherCosts" type="number" inputmode="decimal" min="0" step="1000" value="0">
+          </div>
         </div>
-        <div>
-          <label for="currTenure">Remaining Tenure (months)</label>
-          <input id="currTenure" type="number" inputmode="numeric" min="1" step="1" value="180">
+        <div class="actions">
+          <button id="calcBtn">Compare Offers ⚖️</button>
+          <button id="resetBtn" class="ghost">Reset</button>
         </div>
       </div>
     </section>
 
-    <section class="card container">
-      <h2>New Offer</h2>
-      <div class="row row-3">
-        <div>
-          <label for="newRate">New Rate %</label>
-          <input id="newRate" type="number" inputmode="decimal" min="0" step="0.01" value="8.4">
+    <section class="container" aria-labelledby="bt-summary-heading" style="margin-top: 32px;">
+      <h2 id="bt-summary-heading" style="margin-bottom: 12px;">Comparison Summary</h2>
+      <div class="summary" id="summary"
+        style="margin-top: 0; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
+        <div class="kpi">
+          <div class="label">Net Savings</div>
+          <div class="value highlight" id="netSavings">-</div>
         </div>
-        <div>
-          <label for="processingFee">Processing Fee</label>
-          <input id="processingFee" type="number" inputmode="decimal" min="0" step="1000" value="10000">
+        <div class="kpi">
+          <div class="label">Interest Saved</div>
+          <div class="value" id="interestSaved">-</div>
         </div>
-        <div>
-          <label for="otherCosts">Other Costs</label>
-          <input id="otherCosts" type="number" inputmode="decimal" min="0" step="1000" value="0">
+        <div class="kpi">
+          <div class="label">Current EMI</div>
+          <div class="value" id="currEmi">-</div>
         </div>
-      </div>
-      <div class="actions">
-        <button id="calcBtn">Compare</button>
-        <button id="resetBtn" class="ghost">Reset</button>
-      </div>
-    </section>
-
-    <section class="card container" aria-labelledby="bt-summary-heading">
-      <h2 id="bt-summary-heading">Summary</h2>
-      <div class="summary" id="summary">
-        <div class="kpi"><div class="label">Current EMI</div><div class="value" id="currEmi">-</div></div>
-        <div class="kpi"><div class="label">New EMI</div><div class="value" id="newEmi">-</div></div>
-        <div class="kpi"><div class="label">Interest Saved</div><div class="value" id="interestSaved">-</div></div>
-        <div class="kpi"><div class="label">Net Savings (after costs)</div><div class="value" id="netSavings">-</div></div>
+        <div class="kpi">
+          <div class="label">New EMI</div>
+          <div class="value" id="newEmi">-</div>
+        </div>
       </div>
     </section>
   </main>
 
-  <footer class="container">
-    <div>Built for everyone. Works offline in your browser. · <a href="https://www.linkedin.com/in/yashpal-yadav-990278221/" target="_blank" rel="me noopener">LinkedIn</a></div>
+  <footer>
+    <div class="container">
+      <div>✨ Built for everyone. Works offline in your browser.</div>
+      <div style="margin-top: 12px;">Crafted with passion. Connect on <a
+          href="https://www.linkedin.com/in/yashpal-yadav-990278221/" target="_blank" rel="me noopener">LinkedIn</a>
+      </div>
+    </div>
   </footer>
 
   <script type="module">
@@ -109,6 +133,5 @@
     initApp();
   </script>
 </body>
+
 </html>
-
-
