--- a/pages/education.html
+++ b/pages/education.html
@@ -1,50 +1,56 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Education Loan Calculator</title>
-<meta name="description" content="Education loan calculator with moratorium period, optional payments during moratorium, and prepayment options.">
-<meta name="theme-color" content="#0ea5e9">
-<link rel="manifest" href="../manifest.webmanifest">
-<link rel="icon" href="../favicon.svg" type="image/svg+xml">
-<link rel="stylesheet" href="../styles.css">
-<link rel="canonical" href="https://yashpal-0.github.io/Financial-Calculator/pages/education.html">
-<meta property="og:type" content="website">
-<meta property="og:title" content="Education Loan Calculator">
-<meta property="og:description" content="Education loan calculator with moratorium period, optional payments during moratorium, and prepayment options.">
-<meta property="og:url" content="https://yashpal-0.github.io/Financial-Calculator/pages/education.html">
-<meta property="og:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="Education Loan Calculator">
-<meta name="twitter:description" content="Education loan calculator with moratorium period, optional payments during moratorium, and prepayment options.">
-<meta name="twitter:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Education Loan Calculator | FinCalc</title>
+  <meta name="description"
+    content="Education loan calculator with moratorium period, optional payments during moratorium, and prepayment options.">
+  <meta name="theme-color" content="#4f46e5">
+  <link rel="manifest" href="../manifest.webmanifest">
+  <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="canonical" href="https://yashpal-0.github.io/Financial-Calculator/pages/education.html">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Education Loan Calculator | FinCalc">
+  <meta property="og:description"
+    content="Education loan calculator with moratorium period, optional payments during moratorium, and prepayment options.">
+  <meta property="og:url" content="https://yashpal-0.github.io/Financial-Calculator/pages/education.html">
+  <meta property="og:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
 </head>
+
 <body>
-  <div class="container" style="display:flex;justify-content:flex-end;gap:8px;padding-top:8px;">
-    <button id="installBtn" class="ghost" style="display:none;">Install App</button>
-    <button id="themeToggle" class="ghost" title="Toggle dark mode">🌓</button>
+  <!-- Fixed Controls -->
+  <div class="container"
+    style="display:flex;justify-content:flex-end;gap:12px;padding-top:12px;position:relative;z-index:100;">
+    <button id="installBtn" class="ghost"
+      style="display:none;padding:6px 12px;font-size:14px;border-radius:20px;">Install App</button>
+    <button id="themeToggle" class="ghost" title="Toggle dark mode"
+      style="padding:6px 12px;font-size:16px;border-radius:20px;">🌓</button>
   </div>
+
   <nav class="navbar">
     <div class="container nav-wrap">
-      <div class="brand">Financial Calculator</div>
-      <button class="nav-toggle" aria-label="Toggle menu" onclick="document.body.classList.toggle('nav-open')">☰</button>
+      <div class="brand">FinCalc Suite</div>
+      <button class="nav-toggle" aria-label="Toggle menu" onclick="document.body.classList.toggle('nav-open')">☰
+        Menu</button>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="./emi.html">EMI</a></li>
-        <li><a href="./prepayment.html">Prepayment</a></li>
-        <li><a href="./affordability.html">Affordability</a></li>
-        <li><a href="./balance-transfer.html">Balance Transfer</a></li>
-        <li><a href="./education.html" aria-current="page">Education</a></li>
+        <li><a href="./prepayment.html">Prepay</a></li>
+        <li><a href="./sip.html">SIP</a></li>
+        <li><a href="./fd.html">FD</a></li>
+        <li><a href="./rd.html">RD</a></li>
+        <li><a href="./ppf.html">PPF</a></li>
       </ul>
     </div>
   </nav>
 
-  <header>
-    <div class="container">
-      <h1>🎓 Education Loan Calculator</h1>
-      <p>Calculate education loan EMI with moratorium period, optional payments during study, and prepayment strategies.</p>
-    </div>
+  <header class="page-header container">
+    <h1>🎓 Education Loan</h1>
+    <p style="color:var(--muted); font-size:18px;">Calculate education loan EMI with moratorium periods and study
+      payments.</p>
   </header>
 
   <main>
@@ -57,32 +63,30 @@
             <input id="loanAmount" type="number" inputmode="decimal" min="0" step="1000" placeholder="e.g. 10,00,000">
           </div>
           <div>
-            <label for="annualRate">Annual Interest % (APR)</label>
+            <label for="annualRate">Annual Rate % (APR)</label>
             <input id="annualRate" type="number" inputmode="decimal" min="0" step="0.01" placeholder="e.g. 8.5">
           </div>
         </div>
         <div class="row row-2">
           <div>
-            <label for="moratoriumMonths">Moratorium Period (months)</label>
+            <label for="moratoriumMonths">Moratorium (months)</label>
             <input id="moratoriumMonths" type="number" inputmode="numeric" min="0" step="1" placeholder="e.g. 24">
-            <div class="help">Study period + 6 months grace period</div>
+            <div class="help">Study duration + Grace</div>
           </div>
           <div>
-            <label for="repaymentMonths">Repayment Period (months)</label>
+            <label for="repaymentMonths">Repayment (months)</label>
             <input id="repaymentMonths" type="number" inputmode="numeric" min="1" step="1" placeholder="e.g. 120">
             <div class="help">After moratorium ends</div>
           </div>
         </div>
-        <div class="row">
-          <div class="actions">
-            <button id="calcBtn">Calculate</button>
-            <button id="resetBtn" class="ghost">Reset</button>
-          </div>
+        <div class="actions">
+          <button id="calcBtn">Calculate ✨</button>
+          <button id="resetBtn" class="ghost">Reset</button>
         </div>
       </div>
 
       <div class="card">
-        <h2>Moratorium Options</h2>
+        <h2>Moratorium Setup</h2>
         <div class="row row-2">
           <div>
             <label for="moratoriumInterest">Interest during moratorium</label>
@@ -93,37 +97,58 @@
             </select>
           </div>
           <div>
-            <label for="moratoriumPayment">Monthly payment during moratorium</label>
-            <input id="moratoriumPayment" type="number" inputmode="decimal" min="0" step="100" placeholder="e.g. 5000" disabled>
+            <label for="moratoriumPayment">Monthly payment</label>
+            <input id="moratoriumPayment" type="number" inputmode="decimal" min="0" step="100" placeholder="e.g. 5000"
+              disabled>
             <div class="help">Only if paying interest</div>
           </div>
         </div>
         <div class="prepay-list" id="prepayList" aria-live="polite"></div>
         <div class="actions">
-          <button id="addPrepayBtn" class="secondary">Add Prepayment</button>
-          <button id="clearPrepayBtn" class="ghost">Clear Prepayments</button>
+          <button id="addPrepayBtn" class="secondary">+ Add Prepayment</button>
+          <button id="clearPrepayBtn" class="ghost">Clear</button>
         </div>
       </div>
     </section>
 
-    <section class="card container" aria-labelledby="summary-heading">
-      <h2 id="summary-heading">Summary</h2>
-      <div class="summary" id="summary">
-        <div class="kpi"><div class="label">EMI (After Moratorium)</div><div class="value" id="emiOut">-</div></div>
-        <div class="kpi"><div class="label">Total Interest</div><div class="value" id="totalInterestOut">-</div></div>
-        <div class="kpi"><div class="label">Total Payment</div><div class="value" id="totalPaymentOut">-</div></div>
-        <div class="kpi"><div class="label">Moratorium Interest</div><div class="value" id="moratoriumInterestOut">-</div></div>
-        <div class="kpi"><div class="label">Principal at Start</div><div class="value" id="principalAtStartOut">-</div></div>
-        <div class="kpi"><div class="label">Total Tenure</div><div class="value" id="totalTenureOut">-</div></div>
+    <section class="container" aria-labelledby="summary-heading" style="margin-top: 32px;">
+      <h2 id="summary-heading" style="margin-bottom: 12px;">Outcome</h2>
+      <div class="summary" id="summary"
+        style="margin-top:0; grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));">
+        <div class="kpi">
+          <div class="label">EMI (Post-Moratorium)</div>
+          <div class="value highlight" id="emiOut">-</div>
+        </div>
+        <div class="kpi">
+          <div class="label">Total Paid</div>
+          <div class="value highlight" id="totalPaymentOut">-</div>
+        </div>
+        <div class="kpi">
+          <div class="label">Total Interest</div>
+          <div class="value" id="totalInterestOut">-</div>
+        </div>
+        <div class="kpi">
+          <div class="label">Moratorium Interest</div>
+          <div class="value" id="moratoriumInterestOut">-</div>
+        </div>
+        <div class="kpi">
+          <div class="label">Principal at Start</div>
+          <div class="value" id="principalAtStartOut">-</div>
+        </div>
+        <div class="kpi">
+          <div class="label">Total Tenure</div>
+          <div class="value" id="totalTenureOut">-</div>
+        </div>
       </div>
     </section>
 
-    <section class="card container" aria-labelledby="schedule-heading">
-      <div style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;">
-        <h2 id="schedule-heading" style="margin:0;">Payment Schedule</h2>
-        <div class="actions">
-          <button id="exportCsvBtn" class="ghost">Export CSV</button>
-          <button id="printBtn" class="ghost">Print</button>
+    <section class="table-container container" aria-labelledby="schedule-heading" style="margin-top: 32px;">
+      <div
+        style="padding: 24px; display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;border-bottom: 1px solid var(--glass-border);">
+        <h2 id="schedule-heading" style="margin:0; font-size:20px;">Payment Schedule</h2>
+        <div class="actions" style="margin-top:0;">
+          <button id="exportCsvBtn" class="ghost" style="padding:8px 16px; font-size:14px;">Download CSV ⬇️</button>
+          <button id="printBtn" class="ghost" style="padding:8px 16px; font-size:14px;">Print 🖨️</button>
         </div>
       </div>
       <div class="scroll-x">
@@ -132,23 +157,28 @@
             <tr>
               <th class="left">#</th>
               <th class="left">Period</th>
-              <th>Opening</th>
+              <th>Opening Bal</th>
               <th>Payment</th>
-              <th>Interest</th>
-              <th>Principal</th>
-              <th>Prepayment</th>
-              <th>Closing</th>
+              <th>Interest Component</th>
+              <th>Principal Component</th>
+              <th style="color:var(--success);">Prepaid</th>
+              <th>Closing Bal</th>
             </tr>
           </thead>
           <tbody id="scheduleBody"></tbody>
         </table>
       </div>
     </section>
-
-    <footer class="container">
-      <div>Built for everyone. Works offline in your browser. · <a href="https://www.linkedin.com/in/yashpal-yadav-990278221/" target="_blank" rel="me noopener">LinkedIn</a></div>
-    </footer>
   </main>
+
+  <footer>
+    <div class="container">
+      <div>✨ Built for everyone. Works offline in your browser.</div>
+      <div style="margin-top: 12px;">Crafted with passion. Connect on <a
+          href="https://www.linkedin.com/in/yashpal-yadav-990278221/" target="_blank" rel="me noopener">LinkedIn</a>
+      </div>
+    </div>
+  </footer>
 
   <script type="module">
     import { initApp } from '../scripts/app.js';
@@ -156,4 +186,5 @@
     initApp();
   </script>
 </body>
+
 </html>
