--- a/pages/emi.html
+++ b/pages/emi.html
@@ -1,50 +1,54 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>EMI Calculator</title>
-<meta name="description" content="Home loan EMI calculator with amortization schedule and CSV export.">
-<meta name="theme-color" content="#0ea5e9">
-<link rel="manifest" href="../manifest.webmanifest">
-<link rel="icon" href="../favicon.svg" type="image/svg+xml">
-<link rel="stylesheet" href="../styles.css">
-<link rel="canonical" href="https://yashpal-0.github.io/Financial-Calculator/pages/emi.html">
-<meta property="og:type" content="website">
-<meta property="og:title" content="EMI Calculator">
-<meta property="og:description" content="Home loan EMI calculator with amortization schedule and CSV export.">
-<meta property="og:url" content="https://yashpal-0.github.io/Financial-Calculator/pages/emi.html">
-<meta property="og:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
-<meta name="twitter:card" content="summary">
-<meta name="twitter:title" content="EMI Calculator">
-<meta name="twitter:description" content="Home loan EMI calculator with amortization schedule and CSV export.">
-<meta name="twitter:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>EMI Calculator | FinCalc</title>
+  <meta name="description" content="Home loan EMI calculator with amortization schedule and CSV export.">
+  <meta name="theme-color" content="#4f46e5">
+  <link rel="manifest" href="../manifest.webmanifest">
+  <link rel="icon" href="../favicon.svg" type="image/svg+xml">
+  <link rel="stylesheet" href="../styles.css">
+  <link rel="canonical" href="https://yashpal-0.github.io/Financial-Calculator/pages/emi.html">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="EMI Calculator | FinCalc">
+  <meta property="og:description" content="Home loan EMI calculator with amortization schedule and CSV export.">
+  <meta property="og:url" content="https://yashpal-0.github.io/Financial-Calculator/pages/emi.html">
+  <meta property="og:image" content="https://yashpal-0.github.io/Financial-Calculator/favicon.svg">
 </head>
+
 <body>
-  <div class="container" style="display:flex;justify-content:flex-end;gap:8px;padding-top:8px;">
-    <button id="installBtn" class="ghost" style="display:none;">Install App</button>
-    <button id="themeToggle" class="ghost" title="Toggle dark mode">🌓</button>
+  <!-- Fixed Controls -->
+  <div class="container"
+    style="display:flex;justify-content:flex-end;gap:12px;padding-top:12px;position:relative;z-index:100;">
+    <button id="installBtn" class="ghost"
+      style="display:none;padding:6px 12px;font-size:14px;border-radius:20px;">Install App</button>
+    <button id="themeToggle" class="ghost" title="Toggle dark mode"
+      style="padding:6px 12px;font-size:16px;border-radius:20px;">🌓</button>
   </div>
+
   <nav class="navbar">
     <div class="container nav-wrap">
-      <div class="brand">Financial Calculator</div>
-      <button class="nav-toggle" aria-label="Toggle menu" onclick="document.body.classList.toggle('nav-open')">☰</button>
+      <div class="brand">FinCalc Suite</div>
+      <button class="nav-toggle" aria-label="Toggle menu" onclick="document.body.classList.toggle('nav-open')">☰
+        Menu</button>
       <ul class="nav-links">
         <li><a href="../index.html">Home</a></li>
         <li><a href="./emi.html" aria-current="page">EMI</a></li>
-        <li><a href="./prepayment.html">Prepayment</a></li>
-        <li><a href="./affordability.html">Affordability</a></li>
-        <li><a href="./balance-transfer.html">Balance Transfer</a></li>
-        <li><a href="./education.html">Education</a></li>
+        <li><a href="./prepayment.html">Prepay</a></li>
+        <li><a href="./sip.html">SIP</a></li>
+        <li><a href="./fd.html">FD</a></li>
+        <li><a href="./rd.html">RD</a></li>
+        <li><a href="./ppf.html">PPF</a></li>
       </ul>
     </div>
   </nav>
 
-  <header>
-    <div class="container">
-      <h1>EMI Calculator</h1>
-      <p>Compute EMI and view a detailed amortization schedule.</p>
-    </div>
+  <header class="page-header container">
+    <h1>EMI Calculator</h1>
+    <p style="color:var(--muted); font-size:18px;">Compute your monthly payments and view a detailed amortization
+      schedule.</p>
   </header>
 
   <main>
@@ -64,37 +68,47 @@
         </div>
       </div>
       <div class="actions">
-        <button id="calcBtn">Calculate</button>
+        <button id="calcBtn">Calculate ✨</button>
         <button id="resetBtn" class="ghost">Reset</button>
       </div>
     </section>
 
-    <section class="card container" aria-labelledby="summary-heading">
-      <h2 id="summary-heading">Summary</h2>
-      <div class="summary" id="summary">
-        <div class="kpi"><div class="label">EMI</div><div class="value" id="emiOut">-</div></div>
-        <div class="kpi"><div class="label">Total Interest</div><div class="value" id="totalInterestOut">-</div></div>
-        <div class="kpi"><div class="label">Total Payment</div><div class="value" id="totalPaymentOut">-</div></div>
+    <section class="container" aria-labelledby="summary-heading" style="margin-top: 24px;">
+      <h2 id="summary-heading" style="margin-bottom: 12px;">Summary Overview</h2>
+      <div class="summary" id="summary" style="margin-top: 0;">
+        <div class="kpi">
+          <div class="label">Monthly EMI</div>
+          <div class="value highlight" id="emiOut">-</div>
+        </div>
+        <div class="kpi">
+          <div class="label">Total Interest</div>
+          <div class="value" id="totalInterestOut">-</div>
+        </div>
+        <div class="kpi">
+          <div class="label">Total Payment</div>
+          <div class="value" id="totalPaymentOut">-</div>
+        </div>
       </div>
     </section>
 
-    <section class="card container" aria-labelledby="schedule-heading">
-      <div style="display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;">
-        <h2 id="schedule-heading" style="margin:0;">Amortization Schedule</h2>
-        <div class="actions">
-          <button id="exportCsvBtn" class="ghost">Export CSV</button>
+    <section class="table-container container" aria-labelledby="schedule-heading">
+      <div
+        style="padding: 24px; display:flex;justify-content:space-between;align-items:center;gap:12px;flex-wrap:wrap;border-bottom: 1px solid var(--glass-border);">
+        <h2 id="schedule-heading" style="margin:0; font-size:20px;">Amortization Schedule</h2>
+        <div class="actions" style="margin-top:0;">
+          <button id="exportCsvBtn" class="ghost" style="padding:8px 16px; font-size:14px;">Download CSV ⬇️</button>
         </div>
       </div>
       <div class="scroll-x">
         <table>
           <thead>
             <tr>
-              <th class="left">#</th>
-              <th>Opening</th>
-              <th>EMI</th>
-              <th>Interest</th>
-              <th>Principal</th>
-              <th>Closing</th>
+              <th class="left"># Month</th>
+              <th>Opening Bal</th>
+              <th>EMI Paid</th>
+              <th>Interest Component</th>
+              <th>Principal Component</th>
+              <th>Closing Bal</th>
             </tr>
           </thead>
           <tbody id="scheduleBody"></tbody>
@@ -103,8 +117,13 @@
     </section>
   </main>
 
-  <footer class="container">
-    <div>Built for everyone. Works offline in your browser. · <a href="https://www.linkedin.com/in/yashpal-yadav-990278221/" target="_blank" rel="me noopener">LinkedIn</a></div>
+  <footer>
+    <div class="container">
+      <div>✨ Built for everyone. Works offline in your browser.</div>
+      <div style="margin-top: 12px;">Crafted with passion. Connect on <a
+          href="https://www.linkedin.com/in/yashpal-yadav-990278221/" target="_blank" rel="me noopener">LinkedIn</a>
+      </div>
+    </div>
   </footer>
 
   <script type="module">
@@ -113,6 +132,5 @@
     initApp();
   </script>
 </body>
+
 </html>
-
-
