--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <title>Financial Calculator Suite</title>
   <meta name="description"
     content="Free premium calculators: EMI, Prepayment, SIP, FD, RD, and more. Mobile-friendly and detailed schedules.">
-  <meta name="theme-color" content="#4f46e5">
+  <meta name="theme-color" content="#0d9488">
   <link rel="manifest" href="manifest.webmanifest">
   <link rel="icon" href="favicon.svg" type="image/svg+xml">
   <link rel="stylesheet" href="styles.css">
@@ -40,6 +40,7 @@
         <li><a href="pages/emi.html">EMI</a></li>
         <li><a href="pages/prepayment.html">Prepayment</a></li>
         <li><a href="pages/sip.html">SIP</a></li>
+        <li><a href="pages/mutual-fund.html">Mutual Fund</a></li>
         <li><a href="pages/fd.html">FD</a></li>
         <li><a href="pages/rd.html">RD</a></li>
         <li><a href="pages/ppf.html">PPF</a></li>
@@ -88,6 +89,11 @@
         style="margin-top: 48px; margin-bottom:24px; font-size: 28px; background: var(--accent-gradient); -webkit-background-clip: text; -webkit-text-fill-color: transparent;">
         Investment & Savings</h2>
       <section class="cards">
+        <a class="card card-link" href="pages/mutual-fund.html">
+          <div class="card-icon">📊</div>
+          <h2>Mutual Fund Returns</h2>
+          <p>SIP & lumpsum returns with CAGR, LTCG/STCG tax estimates, and post-tax wealth projection.</p>
+        </a>
         <a class="card card-link" href="pages/sip.html">
           <div class="card-icon">📈</div>
           <h2>SIP Calculator</h2>
