--- a/pages/emi.html
+++ b/pages/emi.html
@@ -38,6 +38,7 @@
         <li><a href="./emi.html" aria-current="page">EMI</a></li>
         <li><a href="./prepayment.html">Prepay</a></li>
         <li><a href="./sip.html">SIP</a></li>
+        <li><a href="./mutual-fund.html">Mutual Fund</a></li>
         <li><a href="./fd.html">FD</a></li>
         <li><a href="./rd.html">RD</a></li>
         <li><a href="./ppf.html">PPF</a></li>
